--- a/packages/layout/src/header/header-logo/HeaderLogo.module.css
+++ b/packages/layout/src/header/header-logo/HeaderLogo.module.css
@@ -1,5 +1,7 @@
 .mobile {
   flex-shrink: 0;
+  height: 2.25rem;
+  aspect-ratio: 100 / 92;
 
   @media (width > 640px) {
     display: none;
@@ -8,6 +10,8 @@
 
 .desktop {
   flex-shrink: 0;
+  height: 2.5rem;
+  aspect-ratio: 112 / 40;
 
   @media (width <= 640px) {
     display: none;
